# pwAsteroids

./: CMakeLists.txt  Doxyfile  README.md  README.txt  install.cmd  pwAsteroids.project  pwAsteroidsWorkspace.workspace
VSProject/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pwAsteroids.sdf.REMOVED.git-id  pwAsteroids.sln  pwAsteroids.vcxproj  pwAsteroids.vcxproj.filters
docs/: DokumentacjaKoncowa.docx  DokumentacjaWstępna.odt
html/: AbstractAllegroEventListener_8h_source.html  ActorIdGenerator_8h_source.html  ActorOnOutOfScreenDestroyerComponent_8h_source.html  ActorTypeComponent_8h_source.html  ActorType_8h_source.html  Actor_8h_source.html  ActorsContainer_8h_source.html  ActorsGenerator_8h_source.html  AliasedTypes_8h_source.html  AllegroEventInterpreter_8h_source.html  AllegroToGameKeyMapper_8h_source.html  AsteroidCollisionComponent_8h_source.html  AsteroidCollisionEndToEndTests_8h_source.html  AsteroidSizeComponent_8h_source.html  AsteroidsCounter_8h_source.html  AsteroidsCountingComponent_8h_source.html  AsteroidsGenerator_8h_source.html  BadScaleArgumentException_8h_source.html  BaseDrawablePrimitive_8h_source.html  BorderIndicatorComponent_8h_source.html  BoundariesDuplicationsDrawingSystem_8h_source.html  Box2DService_8h_source.html  Box2dCollisionsComponent_8h_source.html  Box2dComponent_8h_source.html  Box2dObject_8h_source.html  Box2dObjectsContainer_8h_source.html  Box2dPositionSettingComponent_8h_source.html  CollisionData_8h_source.html  CollisionGroupsData_8h_source.html  CollisionGroups_8h_source.html  CommonTypesVisualizer_8h_source.html  ComponentTypeChecker_8h_source.html  Component_8h_source.html  ComponentsContainer_8h_source.html  ConsoleScreenEventInterpreter_8h_source.html  ConsoleScreen_8h_source.html  ContactComponentsContainer_8h_source.html  DegreesCalculations_8h_source.html  Display_8h_source.html  DrawableObject_8h_source.html  (+511 more)
html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js
latex/: annotated.tex  classA.tex  classAbstractAllegroEventListener.eps  classAbstractAllegroEventListener.tex  classActor.eps  classActor.tex  classActorIdGenerator.tex  classActorOnOutOfScreenDestroyerComponent.eps  classActorOnOutOfScreenDestroyerComponent.tex  classActorTests.eps  classActorTests.tex  classActorTypeComponent.eps  classActorTypeComponent.tex  classActorsContainer.eps  classActorsContainer.tex  classActorsContainerTest.eps  classActorsContainerTest.tex  classActorsGenerator.eps  classActorsGenerator.tex  classAllegroEventInterpreter.tex  classAllegroToGameKeyMapper.tex  classAsteroidCollisionComponent.eps  classAsteroidCollisionComponent.tex  classAsteroidCollisionEndToEndTests.tex  classAsteroidSizeComponent.eps  classAsteroidSizeComponent.tex  classAsteroidsCounter.tex  classAsteroidsCountingComponent.eps  classAsteroidsCountingComponent.tex  classAsteroidsGenerator.eps  classAsteroidsGenerator.tex  classAsteroidsTest.eps  classAsteroidsTest.tex  classBadScaleArgumentException.eps  classBadScaleArgumentException.tex  classBaseDrawablePrimitive.eps  classBaseDrawablePrimitive.tex  classBorderIndicatorComponent.eps  classBorderIndicatorComponent.tex  classBoundariesDuplicationsDrawingSystem.eps  (+281 more)
lib/Windows/: Box2D.lib
mock/: MockComponent.h  MockIActor.h  MockService.h
res/: OnStart.py  asteroid.xcf  bolt.xcf  explode.xcf  heart.xcf  projectile.xcf  rocket.xcf  rockettail.xcf  target.xcf
src/: Actor.cpp  Actor.h  Component.h  ComponentTypeChecker.h  ComponentsContainer.cpp  ComponentsContainer.h  Game.cpp  Game.h  IActor.h  main.cpp
src/Actors/: Actor.h  IActor.h
src/Controller/: AbstractAllegroEventListener.h  AllegroEventInterpreter.cpp  AllegroEventInterpreter.h  AllegroToGameKeyMapper.cpp  AllegroToGameKeyMapper.h  ConsoleScreenEventInterpreter.cpp  ConsoleScreenEventInterpreter.h  GameScreenEventInterpreter.cpp  GameScreenEventInterpreter.h  IScreenEventInterpreter.h  ImageDataContainer.cpp  ImageDataContainer.h  ImagePathsContainer.cpp  ImagePathsContainer.h  KeyStateFetcher.cpp  KeyStateFetcher.h  MenuScreenEventInterpreter.cpp  MenuScreenEventInterpreter.h  MousePositionFetcher.cpp  MousePositionFetcher.h  OptionsMenuScreenEventInterpreter.cpp  OptionsMenuScreenEventInterpreter.h  ResolutionsContainer.cpp  ResolutionsContainer.h  ScreenEventInterpreter.cpp  ScreenEventInterpreter.h  ScreenSize.cpp  ScreenSize.h
src/ModelDrawing/: DrawingSystem.cpp  DrawingSystem.h  IDrawablePrimitive.h  ImagePrimitive.cpp  ImagePrimitive.h  ImagePrimitiveType.h
src/Observer/: IObserver.h  Observable.cpp
src/PrimitiveTypes/: ScaleToScreen.cpp
src/Services/: ActorsContainer.h  IPhysicsService.h
src/Sound/: SoundModule.cpp  SoundModule.h
src/View/: ConsoleScreen.cpp  ConsoleScreen.h  Display.cpp  Display.h  DrawableObject.cpp  DrawableObject.h  EmptyScreen.cpp  EmptyScreen.h  GameScreen.cpp  GameScreen.h  ImageData.h  MenuScreen.cpp  MenuScreen.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  ViewManager.cpp  ViewManager.h
src/components/: Component.h  ComponentsContainer.cpp  PositionComponent.h
src/exceptions/: BadScaleArgumentException.h  ThereIsNotOneComponentOfGivenType.cpp
src/help/: StdContainers.h
src/menu/: MenuModel.cpp  MenuModel.h  MenuOption.h  MenuOptionTypes.h  Submenu.h
src/modelInterfaces/: Keys.h  OutGameScreenModel.cpp  OutGameScreenModel.h
test/: ActorTest.cpp  ComponentTypeInformationTest.cpp  ComponentsContainerTest.cpp  main.cpp
test/EndToEndTests/: AsteroidCollisionEndToEndTests.cpp  AsteroidCollisionEndToEndTests.h  EndToEndTests.cpp  ModelEndToEndTests.cpp  (+1 more)
(+282 files in other folders)
